i3: Add monitor-aware workspace cycling
The workspace-cycle.sh script restricts cycling to workspaces on the current
monitor only, instead of cycling through all workspaces globally.

Fix: Use get_workspaces and filter for focused workspace instead of invalid
get_workspace command.

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -128,9 +128,9 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# Cycle through workspaces
-bindsym $mod+Tab workspace next
-bindsym $mod+Shift+Tab workspace prev
+# Cycle through workspaces on current monitor
+bindsym $mod+Tab exec --no-startup-id ~/.config/i3/workspace-cycle.sh next
+bindsym $mod+Shift+Tab exec --no-startup-id ~/.config/i3/workspace-cycle.sh prev
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
