Rename claude-pegleg to pezzotticlaude, add terminal color change
- Rename stow package from claude-pegleg to pezzotticlaude
- Add purple background (#2d1b4e) when running pezzotticlaude
- Reset to original terminal color (#171421) on exit
- Update README and .gitignore with new names

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Secrets - don't commit API keys
-claude-pegleg/.claude-pegleg/settings.json
+pezzotticlaude/.pezzotticlaude/settings.json
 
 # Claude Code runtime data
-claude-pegleg/.claude-pegleg/debug/
-claude-pegleg/.claude-pegleg/projects/
-claude-pegleg/.claude-pegleg/todos/
-claude-pegleg/.claude-pegleg/shell-snapshots/
+pezzotticlaude/.pezzotticlaude/debug/
+pezzotticlaude/.pezzotticlaude/projects/
+pezzotticlaude/.pezzotticlaude/todos/
+pezzotticlaude/.pezzotticlaude/shell-snapshots/
 
 # Editor swap/backup files
 *.swp
