--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -197,6 +197,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+        font pango:monospace 10
 }
 
 focus_follows_mouse no
